--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -123,6 +123,5 @@
 }
 #slide_down_menu li.slide_active
 {
-  color: white;
   background-color: #1dafec;
 }
